src/objects/QQNNeuralNetwork__c.object
<CustomObject>
    <description>A Neural Network</description>
    <fields>
        <fullName>InputCount__c</fullName>
        <label>InputCount</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LayerCount__c</fullName>
        <label>LayerCount</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LearningRate__c</fullName>
        <label>LearningRate</label>
        <precision>10</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <label>QQNNeuralNetwork</label>
    <nameField>
        <displayFormat>AINN-{0000}</displayFormat>
        <label>NeuralNetwork Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>